@startuml API_Data_Model

' skinparam classAttributeIconSize 0
skinparam classAttributeIconSize 0


class InputData {
    +timestamp: datetime
    +frame_count: int
    +cam_data: list<CameraData>
}

class CameraData {
    +cam_id: CameraId
    +objects: list<Detection>
}

class Detection {
    +cls_name: ObjectType
    +det_id: int
    +bbox: ImageBBox
}

class ImageBBox {
    +x_min: int
    +y_min: int
    +x_max: int
    +y_max: int
}

class OutputData {
    +timestamp: datetime
    +frame_count: int
    +tracks: list<TrackData>
    +risk_assessments: list<RiskEvent>
}

class TrackData {
    +track_id: int
    +object_type: ObjectType
    +motion: MotionVector
    +history: list<LfdObservation>
}

class MotionVector {
    +dx: float
    +dy: float
    +unit: str
}

class BevBBox {
    +x_center: float
    +y_center: float
    +width: float
    +height: float
    +rotation: float
}

class CameraProjection {
    +cam_id: CameraId
    +bbox: ImageBBox
}

class LfdObservation {
    +bev_bbox: BevBBox
    +camera_projections: list<CameraProjection>
    +missed_frames: int
}


class RiskEvent {
    +risk_type: RiskType
    +distance_cm: float
    +vehicle_track_id: int
    +person_track_id: int
}

InputData *-- CameraData
CameraData *-- Detection
Detection *-- ImageBBox

OutputData *-- TrackData
OutputData *-- RiskEvent

TrackData *-- MotionVector
TrackData *-- LfdObservation
LfdObservation *-- BevBBox
LfdObservation *-- CameraProjection 

CameraProjection *-- ImageBBox

class InputData #LightBlue
class CameraData #LightBlue
class Detection #LightBlue
class ImageBBox #LightBlue

class OutputData #ffc79a
class TrackData #ffc79a
class MotionVector #ffc79a
class BevBBox #ffc79a
class CameraProjection #ffc79a
class LfdObservation #ffc79a
class RiskEvent #ffc79a


@enduml